# pygdbmi-mcp-server

./: .env  Dockerfile  README.md  README_EN.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yml
src/pygdbmi_mcp_server/: IoManager.py  helper.py  server.py
