[project]
name = "pygdbmi-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.1",
    "pre-commit>=4.5.0",
    "pygdbmi>=0.11.0.0",
]

[project.scripts]
pygdbmi-mcp-server = "pygdbmi_mcp_server.server:main"